Changed SettingsMenu, fixed TpaManager.